# salesmanager

./: .gitignore  CMakeLists.txt  Makefile  ModuleSDK.h  README.md  Sale.h  SalesManager.h  Vector.h  main.cpp  test_file.txt
modules/: Core.h
src/: Fileio.hpp  InputHandler.h  ModuleSDK.h  SafeConversion.hpp  Sale.h  SalesManager.h  Vector.h  main.cpp
